kubernetes/apps/media/authentik-forward-auth/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: sonarr-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: sonarr
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: sonarr4k-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: sonarr4k
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr4k-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr4k
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prowlarr-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prowlarr
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: lidarr-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: lidarr
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bazarr-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bazarr
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: sabnzbd-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: sabnzbd
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: maintainerr-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: maintainerr
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: profilarr-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: profilarr
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: apprise-forward-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: apprise
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - X-Forwarded-For
      - X-Real-Ip
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-name
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-entitlements
